syntax = "proto3";

package gen;

option go_package = "ms-practice/proto/gen";

message User {
    int32 id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string birthday = 5;
    string phone_number = 6;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message CreateUserRequest {
    string email = 1;
    string first_name = 2;
    string last_name = 3;
    string birthday = 4;
    string phone_number = 5;
}

message CreateUserResponse {
    int32 id = 1;
}

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse); // NEW CreateUser RPC
}
